--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
       </div>
     </div>
 
-    <a href="https://forms.gle/SEU_FORMULARIO_AQUI"
+    <!-- BOTÃO ALTERADO PARA ABRIR FORMULÁRIO INTERNO -->
+    <a href="formulario.html"
        class="cta"
-       target="_blank"
        onclick="fbq('track', 'Lead');">
        Quero meu diagnóstico gratuito
     </a>
@@ -128,3 +128,4 @@
   </div>
 </body>
 </html>
+
