--- a/thankyou.html
+++ b/thankyou.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Obrigado pelo seu interesse! | Intellih Tecnologia</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Obrigado! | Intellih Automação Inteligente</title>
+  <meta name="description" content="Obrigado por solicitar seu diagnóstico gratuito! Nossa equipe entrará em contato em breve.">
+  <style>
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #ffffff;
+      color: #222;
+      text-align: center;
+      padding: 60px 20px;
+    }
+    h1 {
+      color: #c44b04;
+      font-size: 2.4rem;
+      margin-bottom: 20px;
+    }
+    p {
+      font-size: 1.2rem;
+      margin-bottom: 35px;
+      color: #333;
+    }
+    .cta {
+      background: #c44b04;
+      color: #fff;
+      padding: 15px 35px;
+      border: none;
+      border-radius: 10px;
+      font-size: 1.1rem;
+      cursor: pointer;
+      text-decoration: none;
+      display: inline-block;
+      transition: background 0.3s;
+    }
+    .cta:hover {
+      background: #a23c03;
+    }
+    footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #666;
+    }
+    footer a {
+      color: #c44b04;
+      text-decoration: none;
+    }
+  </style>
+</head>
 
-  <!-- PIXEL META -->
+<body>
+  <h1>🎉 Obrigado!</h1>
+  <p>Recebemos seu pedido de diagnóstico gratuito.<br>
+  Nossa equipe da <strong>Intellih Tecnologia</strong> vai analisar suas informações e entrar em contato em breve.</p>
+
+  <a href="https://automacao.intellih.com.br" class="cta">
+    Voltar ao site principal
+  </a>
+
+  <footer>
+    © 2025 <strong>Intellih Tecnologia</strong> – Soluções em IA e Automação Inteligente.  
+    <br>
+    <a href="https://www.intellih.com.br" target="_blank">www.intellih.com.br</a>
+  </footer>
+
+  <!-- Pixel Meta -->
   <script>
     !(function(f,b,e,v,n,t,s){
       if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -16,58 +76,9 @@
       s.parentNode.insertBefore(t,s)})(window, document,'script',
       'https://connect.facebook.net/en_US/fbevents.js');
       fbq('init', '1467115531230271'); 
+      fbq('track', 'PageView');
       fbq('track', 'CompleteRegistration');
-    </script>
-    <noscript>
-      <img height="1" width="1" style="display:none"
-      src="https://www.facebook.com/tr?id=1467115531230271&ev=CompleteRegistration&noscript=1"/>
-    </noscript>
+  </script>
 
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #ffffff;
-      color: #222;
-      text-align: center;
-      padding: 80px 20px;
-    }
-    h1 {
-      color: #c44b04;
-      font-size: 2.2rem;
-      margin-bottom: 20px;
-    }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 40px;
-    }
-    a.btn {
-      background: #c44b04;
-      color: white;
-      padding: 15px 35px;
-      border-radius: 10px;
-      font-size: 1.1rem;
-      text-decoration: none;
-      transition: background 0.3s;
-    }
-    a.btn:hover {
-      background: #a23c03;
-    }
-  </style>
-</head>
-
-<body>
-  <h1>🎉 Obrigado por participar!</h1>
-  <p>Recebemos suas respostas e em breve você receberá um diagnóstico personalizado da nossa equipe.</p>
-
-  <p>Quer adiantar o processo? Fale agora com um especialista da <strong>Intellih Tecnologia</strong> 👇</p>
-
-  <a href="https://wa.me/55SEU_NUMERO_AQUI?text=Olá,+acabei+de+responder+o+diagnóstico+de+automação+e+gostaria+de+saber+mais." target="_blank" class="btn">
-    Falar no WhatsApp
-  </a>
-
-  <footer style="margin-top: 60px; font-size: 0.9rem; color: #666;">
-    © 2025 Intellih Tecnologia – Soluções em IA e Automação Inteligente.
-  </footer>
 </body>
 </html>
-
